--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,8 @@
   <h1>Sign up</h1>
 </div>
 
-<div class="row">
-  <div class="col-sm-6 offset-sm-3">
+<div class="row sign__up">
+  <div class="col-sm-6 offset-sm-3 sign__form">
     <%= form_with(model: @user, local: true) do |f| %>
       <%= render 'layouts/error_messages', model: f.object %>
 
