--- a/app/assets/stylesheets/follow.scss
+++ b/app/assets/stylesheets/follow.scss
@@ -4,6 +4,8 @@
   padding-top: 20px;
   padding-left: 20px;
   padding-bottom: 10px;
+  justify-content: space-between;
+  padding-right: 20px;
 }
 .user_bx {
   border-bottom: 1px solid #e9ecef;
@@ -14,7 +16,10 @@
 }
 .user-body {
   margin-left: 15px;
-  margin-right: 105px;
+  margin-right: 93px;
+}
+.users__follow {
+  width: 116px;
 }
 #user_nm {
   font-size: 18px;
