--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -12,19 +12,21 @@
               <p><%= link_to 'View Profile', user_path(user), id: "view_pf" %></p>
             </div>
           </div>
-          <% unless current_user == user %>
-            <% if current_user.following?(user) %>
-              <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete) do |f| %>
-                <%= hidden_field_tag :follow_id, user.id %>
-                <%= f.submit 'フォロー中', class: 'btn btn-danger btn-block btn-sm', id: "user_unfw_btn" %>
-              <% end %>
-            <% else %>
-              <%= form_with(model: current_user.relationships.build, local: true) do |f| %>
-                <%= hidden_field_tag :follow_id, user.id %>
-                <%= f.submit 'フォローをする', class: 'btn btn-primary btn-block btn-sm', id: "user_fw_btn" %>
+          <div class="users__follow">
+            <% unless current_user == user %>
+              <% if current_user.following?(user) %>
+                <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete) do |f| %>
+                  <%= hidden_field_tag :follow_id, user.id %>
+                  <%= f.submit 'フォロー中', class: 'btn btn-danger btn-block btn-sm', id: "user_unfw_btn" %>
+                <% end %>
+              <% else %>
+                <%= form_with(model: current_user.relationships.build, local: true) do |f| %>
+                  <%= hidden_field_tag :follow_id, user.id %>
+                  <%= f.submit 'フォローをする', class: 'btn btn-primary btn-block btn-sm', id: "user_fw_btn" %>
+                <% end %>
               <% end %>
             <% end %>
-          <% end %>
+          </div>
         </div>
       </li>
     <% end %>
